updated git ignore